[package]
name = "ykkdbposting"
version = "0.1.0"
authors = ["Ayoung"]
edition = "2021"

[dependencies]
#ENV Configuration file
dotenv_codegen = "0.15.0"
env_logger = "0.7"
reqwest = { version = "0.11", features = ["json"] }

#DB
#tiberius = '0.11.0'
tokio = { version = "1.21.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
anyhow = '1.0.64'
odbc = "0.17.0"

#JSON FILE 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#CSV
csv = "1"